--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Flights</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" href="style.css" />
+	<title>Flights</title>
 </head>
 
 <body>
-    <div class="row">
-        <button onclick="toggle('arri')">Arrivals</button>
+	<div class="container">
+		<div class="row">
+			<button onclick="toggle('arri')">Arrivals</button>
         <button onclick="toggle('dep')">departures</button>
     </div>
     <section id="arri-section" class="column">
-        <div class="container">
+
             <table id="arrivalTable">
                 <caption>
                     <h1 id="arri-section">Arrivals</h1>
@@ -63,10 +64,8 @@
             </table>
     </section>
 
-    <!-----------------------------------------------------------departures------------------------------------------------------->
     <section id="dep-section" class="column hidden">
-        <div class="container">
-            <table id="arrivalTable">
+            <table id="departTable">
                 <caption>
                     <h1 id="arri-section">Departures</h1>
                 </caption>
@@ -89,7 +88,7 @@
                         <th class="thFlight no-sort sorting_disabled" data-sortexpression="from" role="columnheader"
                             rowspan="1" colspan="1">
                             <span class="divSortTable">
-                                <label title="Operating airline">Coming From</label>
+                                <label title="Operating airline">Departing to</label>
                                 <span class="arrowSort">&darr;</span>
                             </span>
                         </th>
