--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                     <caption>
                         <h1 id="arri-section">Arrivals</h1>
                     </caption>
-                    <thead>
+                    <thead id="arrivalTableHead">
                         <tr role="row" class="even">
                             <th
                                 class="thFlight no-sort sorting_disabled"
@@ -156,7 +156,7 @@
                             </th>
                         </tr>
                     </thead>
-                    <tbody id="arrivalTableBody"></tbody>
+                    <tbody id="departsTableBody"></tbody>
                 </table>
             </section>
         </div>
