--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
 
     <body>
         <div class="container">
-            <!-- <div class="row">
-                <button class="toggleSection">Arrivals</button>
-                <button class="toggleSection">Departures</button>
-            </div> -->
+            <div class="title">
+                <h1>Flights Scheduler</h1>
+            </div>
 
             <div class="header">
                 <ul>
