--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Flights</title>
+    </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link href="img/favicon.ico" rel="icon" type="image/x-icon" />
-	<link rel="stylesheet" href="style.css" />
-	<title>Flights</title>
-</head>
-
-<body>
-	<div class="container">
-		<div class="title">
-			<h1>Flights Scheduler</h1>
-		</div>
-
-		<div class="header">
-			<ul>
-				<li class="toggleSection active">Arrivals</li>
-				<li class="toggleSection">Departures</li>
-			</ul>
-			<div class="header-search">
-				<div class="city-search">
-					<label for="citySearch">City</label>
+    <body>
+        <div class="container">
+            <div class="lds-ring hidden">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="title">
+                <h1>Flights Scheduler</h1>
+            </div>
+            <div class="header">
+                <ul>
+                    <li class="toggleSection active">Arrivals</li>
+                    <li class="toggleSection">Departures</li>
+                </ul>
+                <div class="header-search">
+                    <div class="city-search">
+                        <label for="citySearch">City</label>
                         <input type="text" id="citySearch" />
                     </div>
                     <div class="search-btns">
@@ -34,13 +38,10 @@
             </div>
             <section id="arrivals" class="column">
                 <table id="arrivalTable">
-                    <!-- <caption>
-                        <h1 id="arri-section">Arrivals</h1>
-                    </caption> -->
                     <thead id="arrivalTableHead">
                         <tr role="row" class="even">
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 role="columnheader"
                                 data-sortexpression="by"
                                 rowspan="1"
@@ -52,7 +53,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 data-sortexpression="id"
                                 role="columnheader"
                                 rowspan="1"
@@ -64,7 +65,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 data-sortexpression="from"
                                 role="columnheader"
                                 rowspan="1"
@@ -76,7 +77,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort active sorting_disabled"
+                                class="thFlight active"
                                 data-sortexpression="arrival"
                                 role="columnheader"
                                 rowspan="1"
@@ -88,7 +89,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 data-sortexpression="terminal"
                                 role="columnheader"
                                 rowspan="1"
@@ -110,7 +111,7 @@
                     <thead id="departTableHead">
                         <tr role="row" class="even">
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 role="columnheader"
                                 data-sortexpression="by"
                                 rowspan="1"
@@ -122,7 +123,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 data-sortexpression="id"
                                 role="columnheader"
                                 rowspan="1"
@@ -134,7 +135,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 data-sortexpression="to"
                                 role="columnheader"
                                 rowspan="1"
@@ -146,7 +147,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort active sorting_disabled"
+                                class="thFlight active"
                                 data-sortexpression="departure"
                                 role="columnheader"
                                 rowspan="1"
@@ -158,7 +159,7 @@
                                 </span>
                             </th>
                             <th
-                                class="thFlight no-sort sorting_disabled"
+                                class="thFlight"
                                 data-sortexpression="terminal"
                                 role="columnheader"
                                 rowspan="1"
