--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 
     <body>
         <div class="container">
-            <div class="lds-ring hidden">
+            <!-- <div class="lds-ring hidden">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
-            </div>
+            </div> -->
             <div class="title">
                 <h1>Flights Scheduler</h1>
             </div>
